--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -61,6 +61,20 @@
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
+          <widget class="QComboBox" name="cbFractalType">
+           <item>
+            <property name="text">
+             <string>Mandelbrot</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Julia</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+         <item>
           <layout class="QHBoxLayout" name="horizontalLayout_9">
            <item>
             <widget class="QLabel" name="label_9">
